# sc-play

icp/hello_world/: package-lock.json  package.json
icp/hello_world/src/hello_world_backend/: Cargo.toml
icp/icp_ledger_canister/: README.md  dfx.json  install.sh
icp/internet_identity/: README.md  dfx.json  install.sh
icp/send_http_get_rust/: Cargo.toml  README.md  package-lock.json  package.json
icp/send_http_get_rust/src/send_http_get_rust_backend/: Cargo.toml
icp/send_http_get_rust/src/send_http_get_rust_backend/src/: lib.rs
multiversx/ping-pong/contract/ping-pong/: deploy-testnet.interaction.json  mxpy.json
multiversx/ping-pong/dapp/src/: config.tsx
multiversx/staking/contract/: Cargo.toml  README.md  deploy-devnet.interaction.json  mxpy.json
multiversx/staking/contract/meta/: Cargo.toml
multiversx/staking/contract/scenarios/: empty.scen.json  staking.scen.json
multiversx/staking/contract/src/: empty.rs  staking-contract.rs  staking.rs
multiversx/staking/contract/tests/: empty_rust_test.rs  empty_scenario_rs_test.rs  staking_rust_test.rs  staking_scenario_go_test.rs  staking_scenario_rs_test.rs
multiversx/staking/contract/wasm/: Cargo.toml
multiversx/staking/contract/wasm/src/: lib.rs
