[package]
name = "staking-contract"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/staking-contract.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
# version = "0.39.5"
version = "0.41.2"

[dev-dependencies.multiversx-sc-scenario]
# version = "0.39.5"
version = "0.41.2"
